--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,13 +13,6 @@
     min-height: 80vh;
 }
 
-.dropdown-item.active,
-.dropdown-item:active {
-    color: black;
-    text-decoration: none;
-    background-color: none;
-}
-
 .active {
     border-bottom: 2px solid black;
 }
@@ -27,17 +20,16 @@
 .product-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
-
 .product-container div { 
-    /* max-width: 50vw; */
     box-shadow: 0 6px 10px -7px grey;
 }
 
 .product-container p { 
     font-weight: 550;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .actual-price{
@@ -53,15 +45,20 @@
     max-height: 75vh;
 }
 
+.cart-img{
+    max-width: 30vw;
+    max-height: 50vh;
+}
+
 .single-product p.price {
     font-weight: bold;
 }
 
 .img-fluid{
     aspect-ratio: 3/3;
-    height: 25rem;
+    height: auto;
+    width: 100%;
     mix-blend-mode: initial;
-    border-radius: 5px;
 }
 
 .product-container h4 { 
@@ -70,4 +67,32 @@
 
 .description{
     font-weight: bold;
+}
+
+.heading{
+    text-align: center;
+}
+
+.cart-card{
+    display: flex;
+}
+
+.price-modal{
+    height : fit-content;
+    width : 30vw;
+    border: 1px solid black;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0rem;
+}
+
+.checkout-btn{
+    width : 100%;
+}
+
+.product-card{
+    max-width: 23vw;
 }
